@@ -442,6 +442,8 @@ sub set_nph {
   return $self;
 }
 
+sub set_response_fixed_length { $_[0]{response_fixed_length} = $_[1]; $_[0] }
+
 sub set_response_body_buffer { $_[0]{response_body_buffer} = $_[1]; $_[0] }
 
 sub set_response_status {
@@ -555,15 +557,42 @@ sub headers_rendered { $_[0]{headers_rendered} }
     Carp::croak "Don't know how to render '$type'" if length $type and !exists $RENDER_TYPES{$type};
     my $charset = $self->{response_charset};
     $charset = 'UTF-8' unless defined $charset;
+
+    my $fixed_length = $self->{response_fixed_length} && !$self->{headers_rendered};
+    my ($response_body, $response_length);
+    if ($type eq 'json') {
+      $response_body = $self->_json->encode($data);
+      $response_length = length $response_body if $fixed_length;
+    } elsif ($type eq 'html' or $type eq 'xml' or $type eq 'text') {
+      if (uc $charset eq 'UTF-8' and do { local $@; eval { require Unicode::UTF8; 1 } }) {
+        $response_body = Unicode::UTF8::encode_utf8($data);
+      } else {
+        require Encode;
+        $response_body = Encode::encode($charset, "$data");
+      }
+      $response_length = length $response_body if $fixed_length;
+    } elsif ($type eq 'data') {
+      $response_body = $data;
+      $response_length = length $response_body if $fixed_length;
+    } elsif ($type eq 'file' and $fixed_length) {
+      $response_length = -s $data;
+      Carp::croak "Failed to retrieve size of file '$data': $!" unless defined $response_length;
+    } elsif ($type eq 'redirect' or ($fixed_length and !length $type)) {
+      $response_length = 0;
+    }
+
     my $out_fh = defined $self->{output_handle} ? $self->{output_handle} : *STDOUT;
     if (!$self->{headers_rendered}) {
-      my @headers = @{$self->{response_headers} || []};
       my $headers_str = '';
       my %headers_set;
-      foreach my $header (@headers) {
+      foreach my $header (@{$self->{response_headers} || []}) {
         my ($name, $value) = @$header;
         $headers_str .= "$name: $value\r\n";
         $headers_set{lc $name} = 1;
+      }
+      if (!$headers_set{'content-length'} and defined $response_length) {
+        $headers_str = "Content-Length: $response_length\r\n$headers_str";
+        $self->{response_fixed_length_set} = 1;
       }
       if (!$headers_set{'content-disposition'} and (defined $self->{response_disposition} or defined $self->{response_filename})) {
         my $value = defined $self->{response_disposition} ? $self->{response_disposition} : 'inline';
@@ -615,18 +644,13 @@ sub headers_rendered { $_[0]{headers_rendered} }
       $self->{headers_rendered} = 1;
     } elsif ($type eq 'redirect') {
       Carp::carp "Attempted to render a redirect but headers have already been rendered";
+    } elsif ($self->{response_fixed_length_set}) {
+      Carp::carp "Attempted to render additional response data but a fixed length response has already been rendered";
+      return $self;
     }
-    if ($type eq 'json') {
-      $out_fh->printflush($self->_json->encode($data));
-    } elsif ($type eq 'html' or $type eq 'xml' or $type eq 'text') {
-      if (uc $charset eq 'UTF-8' and do { local $@; eval { require Unicode::UTF8; 1 } }) {
-        $out_fh->printflush(Unicode::UTF8::encode_utf8($data));
-      } else {
-        require Encode;
-        $out_fh->printflush(Encode::encode($charset, "$data"));
-      }
-    } elsif ($type eq 'data') {
-      $out_fh->printflush($data);
+
+    if ($type eq 'json' or $type eq 'html' or $type eq 'xml' or $type eq 'text' or $type eq 'data') {
+      $out_fh->printflush($response_body);
     } elsif ($type eq 'file' or $type eq 'handle') {
       my $in_fh;
       if ($type eq 'file') {
@@ -641,6 +665,7 @@ sub headers_rendered { $_[0]{headers_rendered} }
       }
       $out_fh->flush;
     }
+    return $self;
   }
 }
 
